# platform_ai

./: .gitignore  Dockerfile  README.md  Taskfile.yml  compose.yaml  logs.txt  manifest.yaml  pyproject.toml
.continue/mcpServers/: new-mcpServer.yaml
.continue/prompts/: objective.json  workspace.prompt
.github/config/: agents.yaml  hooks.yaml  tasks.yaml
.github/prompts/: objective.md
api/: lifespan.py  main.py  mcp_server.py  metadata.py  typings.py
api/interfaces/: service_context.py
api/routes/: context.py  research.py
api/services/: cost_metrics.py  mcp_service.py  research.py
chart/: Chart.yaml  values.yaml
chart/templates/: daemonset.yaml  deployment.yaml  httproute.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
data/dashboards/: memory_log.yaml
data/sources/: analytics.yaml
data/storage/warehouse/: functions.sql
data/tmp/: meta.db
features/: market_trends.py
features/development/generate/: agents.yaml  tasks.yaml
features/development/review/: agents.yaml  tasks.yaml
features/research/: agents.yaml  tasks.yaml
integrations/openwebui/: mcp_pipe.py
integrations/openwebui/filters/: rate_limit_filter.py
integrations/openwebui/pipelines/: github_pipeline.py  langfuse_pipeline.py  n8n_pipeline.py
k8s/: airoutes.yaml  gateway.yaml  kustomization.yaml  namespace.yaml  openwebui-values.yaml  patch-ingress.yaml  patch-service.yaml  patch-test-connection.yaml  secrets-generator.yaml  secrets.enc.yaml
k8s/crawler/: deployment.yaml  kustomization.yaml  service.yaml
k8s/providers/ollama/: api-key.yaml  backend.yaml
lib/application/use_cases/: execute_feature.py
lib/domain/ports/: gateway.py  provider.py  tool.py
lib/domain/repositories/: agent_repository.py
lib/entry/cli/: main.py
lib/infrastructure/gateway/: aigateway.py
lib/infrastructure/tools/: tool_provider.py
lib/utilities/: io.py
metrics/: metrics_exporter.py
notebooks/: ai_gateway.ipynb  test_code_execution.ipynb
scripts/: generate_tables.py  test-gateway.sh
src/: configuration.py  console.py  entrypoint.py  event_handler.py  interfaces.py  loaders.py  manifest.py  mcp_server.py  monitor.py  providers.py  strategies.py  streamlit.py
src/agent/: agent_manager.py
src/agents/: agent_manager.py
src/bridge/: __init__.py  middleware.py
src/console/: layout.py  main.py
src/interfaces/: mcp_definitions.py
src/lib/clients/: openai_api_client.py
src/lib/observability/: logging.py  tracing.py
src/loaders/: crew_loader.py  data_loader.py  provider_loader.py
src/train/: trainer.py
tests/fixtures/mcp/: continue.json
(+4 files in other folders)
