[project]
name = "ai-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.5.0.post8",
    "crewai[tools]==0.114.0",
    "duckdb>=1.2.1",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.20",
    "langchain-ollama>=0.3.0",
    "llama-index>=0.12.26",
    "mcp>=1.5.0",
    "nvitop>=1.4.2",
    "openai-agents>=0.0.7",
    "prometheus-client>=0.21.1",
    "rich>=13.9.4",
    "streamlit>=1.44.0",
]

[project.scripts]
run = "entrypoint:run_main"
mcp_server = "mcp_server:main"
