# [project]
# name = "platform"
# version = "0.1.0-beta.1"
# description = "An example of uv workspace"
# readme = "README.md"
# requires-python = "==3.12.1"
# dependencies = [
#     "platform_ai==0.1.0-beta.1",
# ]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# [tool.uv.workspace]
# members = ["packages/platform_ai"]
# exclude = ["api/*", "terraform/*", "features/*", "integrations/*", "data/*", "chart/*"]

# [tool.uv.sources]
# platform_ai = { workspace = true }

# [project.optional-dependencies]
# build = ["setuptools", "cython"]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".txt",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    ".venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
line-ending = "auto"
